--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Manuel Padilla Dev</title>
+    <title>Manuel Padilla</title>
 
     <link rel="shortcut icon" type="image/png" href="./img/icons/mp_logo.png" />
     <link rel="stylesheet" href="./css/superslides.css" />
@@ -121,7 +121,14 @@
           <div class="col-md-7">
             <h4>Thanks for visiting my site.</h4>
             <p>
-              I'm web developer and lifelong learner with a background in raster and vector graphics and desktop publishing. I am effective at combining creativity and problem solving to develop user-friendly applications as well as knowledgeable in the principles and techniques of website construction and maintenance. I have a strong attention to detail and adept at working with diverse teams to implement projects. I enjoy researching and learning new technologies and features as needed. Hablo Español.
+              I'm web developer and lifelong learner with a background in raster
+              and vector graphics and desktop publishing. I am effective at
+              combining creativity and problem solving to develop user-friendly
+              applications as well as knowledgeable in the principles and
+              techniques of website construction and maintenance. I have a
+              strong attention to detail and adept at working with diverse teams
+              to implement projects. I enjoy researching and learning new
+              technologies and features as needed. Hablo Español.
             </p>
           </div>
         </div>
