--- a/index.html
+++ b/index.html
@@ -146,17 +146,10 @@
           </div>
 
           <div class="owl-carousel owl-theme">
-            <div class="skill">
-              <span class="chart" data-percent="75">
-                <span class="percent">75</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>WordPress</h4>
-              <i class="devicon-wordpress-plain icon"></i>
-            </div>
+            
             <div class="skill">
               <span class="chart" data-percent="85">
-                <span class="percent">85</span>
+                <span class="percent">90</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>HTML</h4>
@@ -164,7 +157,7 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="70">
-                <span class="percent">70</span>
+                <span class="percent">80</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>CSS</h4>
@@ -172,7 +165,7 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="80">
-                <span class="percent">80</span>
+                <span class="percent">75</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Bootstrap</h4>
@@ -188,7 +181,7 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="80">
-                <span class="percent">80</span>
+                <span class="percent">70</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>jQuery</h4>
@@ -196,7 +189,7 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="70">
-                <span class="percent">70</span>
+                <span class="percent">80</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Node.js</h4>
@@ -204,7 +197,7 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="67">
-                <span class="percent">67</span>
+                <span class="percent">70</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Express</h4>
@@ -219,8 +212,16 @@
               <i class="devicon-mongodb-plain icon"></i>
             </div>
             <div class="skill">
+              <span class="chart" data-percent="75">
+                <span class="percent">70</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>WordPress</h4>
+              <i class="devicon-wordpress-plain icon"></i>
+            </div>
+            <div class="skill">
               <span class="chart" data-percent="60">
-                <span class="percent">60</span>
+                <span class="percent">50</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Java</h4>
@@ -751,6 +752,10 @@
 
           <a href="https://github.com/Manuel-Padilla" target="_blank">
             <img src="./img/icons/github.png" alt="github Manuel Padilla"
+          /></a>
+
+          <a href="https://www.behance.net/manuel-padilla" target="_blank">
+            <img src="./img/icons/behance.png" alt="behance Manuel Padilla"
           /></a>
         </div>
         <p>
