--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="col-md-7">
             <h4>Thanks for visiting my site.</h4>
             <p>
-              I'm web developer and lifelong learner with a background in raster
+              I'm a web developer and lifelong learner with a background in raster
               and vector graphics and desktop publishing. I am effective at
               combining creativity and problem solving to develop user-friendly
               applications as well as knowledgeable in the principles and
@@ -253,8 +253,8 @@
                   <i class="fa fa-clock"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">1</h2>
-                  <h3>Years Experience</h3>
+                  <p class="counter">1</p>
+                  <p>Years Experience</p>
                 </div>
               </div>
             </div>
@@ -266,8 +266,8 @@
                   <i class="fa fa-calendar"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">3</h2>
-                  <h3>Clients</h3>
+                  <p class="counter">3</p>
+                  <p>Clients</p>
                 </div>
               </div>
             </div>
@@ -279,8 +279,8 @@
                   <i class="fa fa-bolt"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">8</h2>
-                  <h3>Apps</h3>
+                  <p class="counter">8</p>
+                  <p>Apps</p>
                 </div>
               </div>
             </div>
@@ -292,8 +292,8 @@
                   <i class="fa fa-cloud"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">3</h2>
-                  <h3>Websites Made</h3>
+                  <p class="counter">3</p>
+                  <p>Websites Made</p>
                 </div>
               </div>
             </div>
