--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           <li>
             <a class="nav-link" href="#skills">Skills</a>
           </li>
-          <li>
+          <!-- <li>
             <a class="nav-link" href="#stats">Stats</a>
-          </li>
+          </li> -->
           <li>
             <a class="nav-link" href="#contact">Contact</a>
           </li>
@@ -121,14 +121,14 @@
           <div class="col-md-7">
             <h4>Thanks for visiting my site.</h4>
             <p>
-              I'm a web developer and lifelong learner with a background in raster
-              and vector graphics and desktop publishing. I am effective at
-              combining creativity and problem solving to develop user-friendly
-              applications as well as knowledgeable in the principles and
-              techniques of website construction and maintenance. I have a
-              strong attention to detail and adept at working with diverse teams
-              to implement projects. I enjoy researching and learning new
-              technologies and features as needed. Hablo Español.
+              I'm a web developer and lifelong learner with a background in
+              raster and vector graphics and desktop publishing. I am effective
+              at combining creativity and problem solving to develop
+              user-friendly applications as well as knowledgeable in the
+              principles and techniques of website construction and maintenance.
+              I have a strong attention to detail and adept at working with
+              diverse teams to implement projects. I enjoy researching and
+              learning new technologies and features as needed. Hablo Español.
             </p>
           </div>
         </div>
@@ -141,99 +141,55 @@
           <div class="col-md-12 text-center">
             <h2>Technical Skills</h2>
             <p>
-              Scroll to see a representation of my proficiency in each skill
+              Scroll to view my technical skills
             </p>
-          </div>
 
-          <div class="owl-carousel owl-theme">
-            
-            <div class="skill">
-              <span class="chart" data-percent="90">
-                <span class="percent">90</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>HTML</h4>
-              <i class="devicon-html5-plain icon"></i>
+            <p class="title">Front-End</p>
+            <div class="owl-carousel owl-theme">
+              <div class="skill">
+                <h4>HTML</h4>
+                <i class="devicon-html5-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>CSS</h4>
+                <i class="devicon-css3-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Bootstrap</h4>
+                <i class="devicon-bootstrap-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>JavaScript</h4>
+                <i class="devicon-javascript-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>jQuery</h4>
+                <i class="devicon-jquery-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Illustrator</h4>
+                <i class="devicon-illustrator-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>WordPress</h4>
+                <i class="devicon-wordpress-plain icon"></i>
+              </div>
             </div>
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>CSS</h4>
-              <i class="devicon-css3-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="75">
-                <span class="percent">75</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Bootstrap</h4>
-              <i class="devicon-bootstrap-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>JavaScript</h4>
-              <i class="devicon-javascript-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="70">
-                <span class="percent">70</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>jQuery</h4>
-              <i class="devicon-jquery-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Node.js</h4>
-              <i class="devicon-nodejs-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="70">
-                <span class="percent">70</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Express</h4>
-              <i class="devicon-express-original icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>MongoDB</h4>
-              <i class="devicon-mongodb-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="70">
-                <span class="percent">70</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>WordPress</h4>
-              <i class="devicon-wordpress-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="50">
-                <span class="percent">50</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Java</h4>
-              <i class="devicon-java-plain icon"></i>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="90">
-                <span class="percent">90</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Illustrator</h4>
-              <i class="devicon-illustrator-plain icon"></i>
+
+            <p class="title">Back-End</p>
+            <div class="owl-carousel owl-theme">
+              <div class="skill">
+                <h4>Node.js</h4>
+                <i class="devicon-nodejs-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Express</h4>
+                <i class="devicon-express-original icon"></i>
+              </div>
+              <div class="skill">
+                <h4>MongoDB</h4>
+                <i class="devicon-mongodb-plain icon"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -242,7 +198,7 @@
 
     <div id="stats" class="statsSection section">
       <div class="container">
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-12 text-center">
             <h2>Stats</h2>
           </div>
@@ -298,7 +254,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
