additional section changes

--- a/index.html
+++ b/index.html
@@ -130,6 +130,17 @@
               diverse teams to implement projects. I enjoy researching and
               learning new technologies and features as needed. Hablo Español.
             </p>
+
+            <p class="taken">
+              "I don't know who you are. I don't know what you want. If you are
+              looking for ransom I can tell you I don't have money, but what I
+              do have are a very particular set of skills. Skills I have
+              acquired over a very long career. Skills that make me a nightmare
+              for people like you. If you let my daughter go now that'll be the
+              end of it. I will not look for you, I will not pursue you, but if
+              you don't, I will look for you, I will find you and I will kill
+              you." —Liam Neeson, Taken
+            </p>
           </div>
         </div>
       </div>
@@ -141,7 +152,7 @@
           <div class="col-md-12 text-center">
             <h2>Technical Skills</h2>
             <p>
-              Scroll to view my technical skills
+              Scroll to view my ninja skills
             </p>
 
             <p class="title">Front-End</p>
@@ -166,14 +177,6 @@
                 <h4>jQuery</h4>
                 <i class="devicon-jquery-plain icon"></i>
               </div>
-              <div class="skill">
-                <h4>Illustrator</h4>
-                <i class="devicon-illustrator-plain icon"></i>
-              </div>
-              <div class="skill">
-                <h4>WordPress</h4>
-                <i class="devicon-wordpress-plain icon"></i>
-              </div>
             </div>
 
             <p class="title">Back-End</p>
@@ -189,6 +192,30 @@
               <div class="skill">
                 <h4>MongoDB</h4>
                 <i class="devicon-mongodb-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Java</h4>
+                <i class="devicon-java-plain icon"></i>
+              </div>
+            </div>
+
+            <p class="title">Additional</p>
+            <div class="owl-carousel owl-theme">
+              <div class="skill">
+                <h4>WordPress</h4>
+                <i class="devicon-wordpress-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Illustrator</h4>
+                <i class="devicon-illustrator-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Photoshop</h4>
+                <i class="devicon-photoshop-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Git</h4>
+                <i class="devicon-git-plain icon"></i>
               </div>
             </div>
           </div>
@@ -328,6 +355,7 @@
 
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Band Website</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -363,7 +391,9 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Clicky Game Martin Edition</p>
               </li>
+
               <li
                 onclick=""
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
@@ -402,6 +432,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Concert Live</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -438,6 +469,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Crystal Collector</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -474,6 +506,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Eat Da Burger</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -510,6 +543,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Friend Finder</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -544,6 +578,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Gif Tastic</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -580,6 +615,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Psychic Game</p>
               </li>
               <li
                 onclick=""
@@ -619,6 +655,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Things 4 Sale</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -655,6 +692,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Train Scheduler</p>
               </li>
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -690,6 +728,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
+                <p>Trivia Game Newsradio Edition</p>
               </li>
             </ul>
           </div>
