--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Manuel Padilla</title>
 
-    <link rel="shortcut icon" type="image/png" href="./img/icons/mp_logo.png" />
+    <link rel="shortcut icon" type="image/png" href="./img/icons/m_logo.png" />
     <link rel="stylesheet" href="./css/superslides.css" />
     <link rel="stylesheet" href="./css/owl.carousel.min.css" />
     <link
@@ -57,6 +57,7 @@
         <div class="heading">
           <p class="main">Manuel Padilla</p>
           <p class="sub">Web Developer</p>
+          <!-- <img src="./img/icons/mw_logo.png" alt="Manuel Padilla logo" /> -->
           <!-- <p class="quote typed"></p> -->
 
           <nav class="slides-navigation">
@@ -85,9 +86,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#slides"
-              ><span class="sr-only">(current)</span>Manuel Padilla</a
-            >
+            <a class="nav-link logo" href="#slides"
+              ><span class="sr-only">(current)</span>
+              <img src="./img/icons/mw_logo.png" alt="Manuel Padilla logo"
+            /></a>
           </li>
           <li>
             <a class="nav-link" href="#about">About</a>
