--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="titleMessage">
         <div class="heading">
           <p class="main">Manuel Padilla</p>
-          <p class="sub">Web Developer</p>
+          <p class="sub">Computer Networking & IT</p>
           <!-- <img src="./img/icons/mw_logo.png" alt="Manuel Padilla logo" /> -->
           <!-- <p class="quote typed"></p> -->
 
@@ -123,11 +123,14 @@
           <div class="col-md-7">
             <h4>Thanks for visiting my site.</h4>
             <p>
-              I'm a web developer and lifelong learner with a background in
-              raster and vector graphics and desktop publishing. I am effective
-              at combining creativity and problem solving to develop
-              user-friendly applications as well as knowledgeable in the
-              principles and techniques of website construction and maintenance.
+              My professional background is in graphic design but I have a
+              passion for computers. More specific to my interest are computer
+              networking, tech support and AWS. I have completed Google IT
+              Support Professional Certificates. Specializing in Technical
+              Support Fundamentals, The Bits and Bytes of Computer Networking,
+              Operating Systems and You: Becoming a Power User, System
+              Administration, and IT Infrastructure Services. I am working on my
+              CCNA and AWS Certified Solutions Architect Associate certificates.
               I have a strong attention to detail and adept at working with
               diverse teams to implement projects. I enjoy researching and
               learning new technologies and features as needed. Hablo Español.
