--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Manuel Padilla</title>
+    <title>Manuel Padilla - IT Support</title>
 
     <link rel="shortcut icon" type="image/png" href="./img/icons/m_logo.png" />
     <link rel="stylesheet" href="./css/superslides.css" />
@@ -56,7 +56,7 @@
       <div class="titleMessage">
         <div class="heading">
           <p class="main">Manuel Padilla</p>
-          <p class="sub">Computer Networking & IT</p>
+          <p class="sub">Information Technology Support</p>
           <!-- <img src="./img/icons/mw_logo.png" alt="Manuel Padilla logo" /> -->
           <!-- <p class="quote typed"></p> -->
 
@@ -123,17 +123,15 @@
           <div class="col-md-7">
             <h4>Thanks for visiting my site.</h4>
             <p>
-              My professional background is in graphic design but I have a
-              passion for computers. More specific to my interest are computer
-              networking, tech support and AWS. I have completed Google IT
+              My professional background is in graphic design but I am an engaged, entry-level IT enthusiast seeking a customer focused, technical support role. More specific to my interest is computer
+              networking and learning Python. I have completed the following courses in the Google IT
               Support Professional Certificates. Specializing in Technical
               Support Fundamentals, The Bits and Bytes of Computer Networking,
               Operating Systems and You: Becoming a Power User, System
-              Administration, and IT Infrastructure Services. I am working on my
-              CCNA and AWS Certified Solutions Architect Associate certificates.
-              I have a strong attention to detail and adept at working with
-              diverse teams to implement projects. I enjoy researching and
-              learning new technologies and features as needed. Hablo Español.
+              Administration, and IT Infrastructure Services. I am currently working on my
+              CompTIA A+ Certification and hope to obtain my Network +, Security + and CCNA in the near future.
+              I have customer service experience, a strong attention to detail and adept at working with
+              diverse teams to implement projects. I enjoy researching, learning new concepts and keeping up IT field. Tambien hablo Español.
             </p>
           </div>
         </div>
@@ -144,61 +142,52 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>Technical Skills</h2>
+            <h2>Technical and Business Proficiencies</h2>
             <p>
-              Scroll to view my ninja skills
+              Scroll to view skills
             </p>
 
-            <p class="title">Front-End</p>
+            <p class="title">Technical</p>
             <div class="owl-carousel owl-theme">
               <div class="skill">
-                <h4>HTML</h4>
-                <i class="devicon-html5-plain icon"></i>
+                <h4>Linux</h4>
+                <i class="devicon-linux-plain"></i>
               </div>
               <div class="skill">
-                <h4>CSS</h4>
-                <i class="devicon-css3-plain icon"></i>
+                <h4>Windows</h4>
+                <i class="devicon-windows8-original"></i>
               </div>
               <div class="skill">
-                <h4>Bootstrap</h4>
-                <i class="devicon-bootstrap-plain icon"></i>
-              </div>
-              <div class="skill">
-                <h4>JavaScript</h4>
-                <i class="devicon-javascript-plain icon"></i>
-              </div>
-              <div class="skill">
-                <h4>jQuery</h4>
-                <i class="devicon-jquery-plain icon"></i>
-              </div>
+                <h4>Python</h4>
+                <i class="devicon-python-plain"></i>
+              </div>icon-css3-plain icon"></i>
+              </div> -->
             </div>
 
-            <p class="title">Back-End</p>
+            <p class="title">Business</p>
             <div class="owl-carousel owl-theme">
               <div class="skill">
-                <h4>Node.js</h4>
-                <i class="devicon-nodejs-plain icon"></i>
+                <h4>Excellent written and verbal communication</h4>
               </div>
               <div class="skill">
-                <h4>Express</h4>
-                <i class="devicon-express-original icon"></i>
+                <h4>Work Ethic</h4>
               </div>
               <div class="skill">
-                <h4>MongoDB</h4>
-                <i class="devicon-mongodb-plain icon"></i>
+                <h4>Adaptability</h4>
               </div>
               <div class="skill">
-                <h4>Java</h4>
-                <i class="devicon-java-plain icon"></i>
+                <h4>Empathy</h4>
+              </div>
+              <div class="skill">
+                <h4>Trustworthiness</h4>
+              </div>
+              <div class="skill">
+                <h4>Organizational Strength</h4>
               </div>
             </div>
 
             <p class="title">Additional</p>
             <div class="owl-carousel owl-theme">
-              <div class="skill">
-                <h4>WordPress</h4>
-                <i class="devicon-wordpress-plain icon"></i>
-              </div>
               <div class="skill">
                 <h4>Illustrator</h4>
                 <i class="devicon-illustrator-plain icon"></i>
@@ -282,12 +271,12 @@
     <div id="contact" class="contactSection section">
       <div class="col-md-12 text-center">
         <h2>Contact</h2>
-        <p class="subHeading">Like what you see?</p>
+        <p class="subHeading">Please let me know how I can help with Tech Support needs.</p>
         <h2>I'd love to hear from you!</h2>
         <a href="mailTo:manuelantoniopadilla@gmail.com" class="contactButton"
           >GET IN TOUCH</a
         >
-        <a href="./documents/resume.pdf" target="_blank" class="contactButton"
+        <a href="./documents/ManuelPadilla_TechnicalSupport.pdf" target="_blank" class="contactButton"
           >MY RESUME</a
         >
       </div>
@@ -297,7 +286,7 @@
       <div class="container">
         <div class="row">
           <div class="heading">
-            <h2>Portfolio</h2>
+            <h2>Just for fun. My coding boot camp portfolio</h2>
           </div>
 
           <div class="filter">
@@ -748,7 +737,7 @@
           /></a>
         </div>
         <p>
-          &copy; Copyright Manuel Padilla 2020
+          &copy; Copyright Manuel Padilla 2021
         </p>
       </div>
     </div>
