index file update

--- a/index.html
+++ b/index.html
@@ -123,15 +123,20 @@
           <div class="col-md-7">
             <h4>Thanks for visiting my site.</h4>
             <p>
-              My professional background is in graphic design but I am an engaged, entry-level IT enthusiast seeking a customer focused, technical support role. More specific to my interest is computer
-              networking and learning Python. I have completed the following courses in the Google IT
-              Support Professional Certificates. Specializing in Technical
-              Support Fundamentals, The Bits and Bytes of Computer Networking,
-              Operating Systems and You: Becoming a Power User, System
-              Administration, and IT Infrastructure Services. I am currently working on my
-              CompTIA A+ Certification and hope to obtain my Network +, Security + and CCNA in the near future.
-              I have customer service experience, a strong attention to detail and adept at working with
-              diverse teams to implement projects. I enjoy researching, learning new concepts and keeping up IT field. Tambien hablo Español.
+              My professional background is in graphic design but I am an
+              engaged, entry-level IT enthusiast seeking a customer focused,
+              technical support role. More specific to my interest is computer
+              networking and learning Python. I have completed the following
+              courses in the Google IT Support Professional Certificates.
+              Specializing in Technical Support Fundamentals, The Bits and Bytes
+              of Computer Networking, Operating Systems and You: Becoming a
+              Power User, System Administration, and IT Infrastructure Services.
+              I am currently working on my CompTIA A+ Certification and hope to
+              obtain my Network +, Security + and CCNA in the near future. I
+              have customer service experience, a strong attention to detail and
+              adept at working with diverse teams to implement projects. I enjoy
+              researching, learning new concepts and keeping up with the IT
+              field. Tambien hablo Español.
             </p>
           </div>
         </div>
@@ -143,25 +148,30 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h2>Technical and Business Proficiencies</h2>
-            <p>
-              Scroll to view skills
-            </p>
+            <p>Scroll to view skills</p>
 
             <p class="title">Technical</p>
             <div class="owl-carousel owl-theme">
               <div class="skill">
                 <h4>Linux</h4>
-                <i class="devicon-linux-plain"></i>
+                <i class="devicon-linux-plain icon"></i>
               </div>
               <div class="skill">
                 <h4>Windows</h4>
-                <i class="devicon-windows8-original"></i>
+                <i class="devicon-windows8-original icon"></i>
               </div>
               <div class="skill">
                 <h4>Python</h4>
-                <i class="devicon-python-plain"></i>
-              </div>icon-css3-plain icon"></i>
-              </div> -->
+                <i class="devicon-python-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Illustrator</h4>
+                <i class="devicon-illustrator-plain icon"></i>
+              </div>
+              <div class="skill">
+                <h4>Photoshop</h4>
+                <i class="devicon-photoshop-plain icon"></i>
+              </div>
             </div>
 
             <p class="title">Business</p>
@@ -183,22 +193,6 @@
               </div>
               <div class="skill">
                 <h4>Organizational Strength</h4>
-              </div>
-            </div>
-
-            <p class="title">Additional</p>
-            <div class="owl-carousel owl-theme">
-              <div class="skill">
-                <h4>Illustrator</h4>
-                <i class="devicon-illustrator-plain icon"></i>
-              </div>
-              <div class="skill">
-                <h4>Photoshop</h4>
-                <i class="devicon-photoshop-plain icon"></i>
-              </div>
-              <div class="skill">
-                <h4>Git</h4>
-                <i class="devicon-git-plain icon"></i>
               </div>
             </div>
           </div>
@@ -271,14 +265,19 @@
     <div id="contact" class="contactSection section">
       <div class="col-md-12 text-center">
         <h2>Contact</h2>
-        <p class="subHeading">Please let me know how I can help with Tech Support needs.</p>
+        <p class="subHeading">
+          Please let me know how I can help with your tech support needs.
+        </p>
         <h2>I'd love to hear from you!</h2>
         <a href="mailTo:manuelantoniopadilla@gmail.com" class="contactButton"
           >GET IN TOUCH</a
         >
-        <a href="./documents/ManuelPadilla_TechnicalSupport.pdf" target="_blank" class="contactButton"
-          >MY RESUME</a
-        >
+        <a
+          href="./documents/ManuelPadilla_TechnicalSupport.pdf"
+          target="_blank"
+          class="contactButton"
+          >MY RESUME
+        </a>
       </div>
     </div>
 
@@ -736,9 +735,7 @@
             <img src="./img/icons/behance.png" alt="behance Manuel Padilla"
           /></a>
         </div>
-        <p>
-          &copy; Copyright Manuel Padilla 2021
-        </p>
+        <p>&copy; Copyright Manuel Padilla 2021</p>
       </div>
     </div>
 
