--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <div class="container">
         <div class="row">
           <div class="heading">
-            <h2>Just for fun. My coding boot camp portfolio</h2>
+            <h2>Just for fun. My coding boot camp portfolio.</h2>
           </div>
 
           <div class="filter">
