--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               of Computer Networking, Operating Systems and You: Becoming a
               Power User, System Administration, and IT Infrastructure Services.
               I am currently working on my CompTIA A+ Certification and hope to
-              obtain my Network +, Security + and CCNA in the near future. I
+              obtain my Network +, Security +, and CCNA in the near future. I
               have customer service experience, a strong attention to detail and
               adept at working with diverse teams to implement projects. I enjoy
               researching, learning new concepts and keeping up with the IT
@@ -285,7 +285,7 @@
       <div class="container">
         <div class="row">
           <div class="heading">
-            <h2>Just for fun. My coding boot camp portfolio</h2>
+            <h2>Just for fun. My coding boot camp portfolio.</h2>
           </div>
 
           <div class="filter">
