--- a/index.html
+++ b/index.html
@@ -132,15 +132,14 @@
               I started off as a graphic designer, however I found over time
               that my interest shifted towards information technology. I
               realized that the problem solving skills I used in design could
-              somehow be applied to help people solve their technical issues. I
+              be applied to help people solve their technical issues. I
               am an entry-level IT professional who is seeking a customer
-              focused, technical support role. My interests in IT are geared
+              focused, technical support role. I watch CBTNuggets and Udemy videos to help further my professional career. My interests in IT are geared
               toward networking, Python, Linux, Cloud and API's. I hope to obtain my Network +, Security +, and
               CCNA in the near future. I have sold mattresses, worked as a
               recruiter and even served as an alternate judge in the 2020
               presidential election. All have helped me build trust with people.
-              It feels great helping solve people's technical issues so that
-              they can get their jobs done.
+              It feels great enabling and empowering others to do their jobs.
             </p>
             <p>También hablo español.</p>
           </div>
@@ -319,12 +318,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
-              <h2>Contact</h2>
+              <h2>Hiring?</h2>
               <!-- <p class="subHeading">
                 Please let me know how I can help with your tech support needs.
               </p> -->
               <h2>I look forward to hearing from you.</h2>
-              <a href="mailTo:manuelantoniopadilla@gmail.com" class="contactButton"
+              <a href="mailTo:manuelpadilla83@hotmail.com" class="contactButton"
                 >MESSAGE ME</a>
               <a
                 href="./documents/ManuelPadilla_TechnicalSupport.pdf"
@@ -786,13 +785,13 @@
             ><img src="./img/icons/linkedIn.png" alt="linkedIn Manuel Padilla"
           /></a>
 
-          <a href="https://github.com/Manuel-Padilla" target="_blank">
+          <!-- <a href="https://github.com/Manuel-Padilla" target="_blank">
             <img src="./img/icons/github.png" alt="github Manuel Padilla"
           /></a>
 
           <a href="https://www.behance.net/manuel-padilla" target="_blank">
             <img src="./img/icons/behance.png" alt="behance Manuel Padilla"
-          /></a>
+          /></a> -->
         </div>
         <p>&copy; Copyright Manuel Padilla 2021</p>
       </div>
