--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="col-md-7">
           <h4>Thanks for visiting my site.</h4>
           <p>
-            My major part of my professional career has been in graphic design, I graduated from Houston Community
+            The major portion of my professional career has been in graphic design, I graduated from Houston Community
             College with a degree in Graphic
             Design Specialization. I was awarded Digital Communications Student of the Year in 2010. To keep up with
             this digital age, I'm taking my skills to another level. I received a certificate in web development from UT
